--- a/style/style.css
+++ b/style/style.css
@@ -292,3 +292,49 @@ ul, ol, li {
   margin: 0;
   list-style: none;
 }
+
+a, p {
+  font-size: 36px;
+  font-size: 3.6rem;
+}
+
+.wrapper {
+  max-width: calc( 200px * 4 + 80px);
+  width: 80%;
+  margin: 0 auto;
+}
+
+.header {
+  position: absolute;
+}
+
+.main__cards-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding: 40px;
+  background: #3b3b3b;
+}
+
+.main__cards-container__card {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 200px;
+          flex: 0 1 200px;
+  height: 200px;
+  border: 1px solid #000;
+}
+
+.main__cards-container__card__image {
+  height: 100%;
+  width: 100%;
+}
