--- a/style/style.css
+++ b/style/style.css
@@ -327,11 +327,22 @@ a, p {
 }
 
 .main__cards-container__card {
+  position: relative;
   -webkit-box-flex: 0;
       -ms-flex: 0 1 200px;
           flex: 0 1 200px;
   height: 200px;
   border: 1px solid #000;
+}
+
+.main__cards-container__card__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  opacity: 90%;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
 }
 
 .main__cards-container__card__image {
