--- a/style/style.css
+++ b/style/style.css
@@ -293,6 +293,13 @@ ul, ol, li {
   list-style: none;
 }
 
+button {
+  padding: 0;
+  border: none;
+  margin: 0;
+  background: none;
+}
+
 a, p {
   font-size: 36px;
   font-size: 3.6rem;
@@ -306,6 +313,71 @@ a, p {
 
 .header {
   position: absolute;
+  height: 100%;
+  width: 40px;
+  padding: 2% 0;
+  border: 1px solid red;
+}
+
+.header__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+}
+
+.header__list::after {
+  content: '';
+  position: absolute;
+}
+
+.header__list__item__reset__arrow {
+  position: relative;
+  height: 40px;
+  width: 40px;
+  border: 3px solid transparent;
+  border-top-color: black;
+  border-left-color: black;
+  border-bottom-color: black;
+  border-radius: 50%;
+  -webkit-transform: rotate(35deg);
+          transform: rotate(35deg);
+}
+
+.header__list__item__reset__arrow:before {
+  content: "";
+  position: absolute;
+  height: 0;
+  width: 0;
+  top: 0px;
+  left: 80%;
+  border-left: 10px solid black;
+  border-top: 5px solid transparent;
+  border-bottom: 10px solid transparent;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
 }
 
 .main__cards-container {
