--- a/style/sass/_global.scss
+++ b/style/sass/_global.scss
@@ -1,7 +1,7 @@
 ::selection { color: turquoise; }
 :focus {@include focusState();}
 html {scroll-behavior: smooth;}
-body {background: $primary-white;}
+body {background: $primaryWhite;}
 img {display: block;}
 
 ul, ol, li {
@@ -22,7 +22,7 @@ a, p {
 }
 
 .wrapper {
-  max-width: calc( #{$squareCardSize} * 4 + 80px );
+  max-width: calc( #{$squareCardSize} * 5 + 80px );
   width: 80%;
   margin: 0 auto;
 }
