--- a/style/sass/_header.scss
+++ b/style/sass/_header.scss
@@ -2,21 +2,31 @@
   position: absolute;
   height: 100%;
   width: 40px;
-  padding: 2% 0;
-  border: 1px solid red;
+  padding: 20px 0;
+  
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 40px;
+    border-right: 1px solid lighten($primaryBlack, 40%);
+  }
 
   &__list {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     height: 100%;
-    
-    transform: translateX(50%);
+    padding-left: 20px;
 
     &::after {
       content: '';
       position: absolute;
+    }
 
+    &__item__timer {
+      margin: 0;
     }
   }
 
@@ -29,11 +39,13 @@
     border-top-color: black;
     border-left-color: black;
     border-bottom-color: black;
+    border-right-color: transparent;
     border-radius: 50%;
 
     transform: rotate(35deg);
+    transition: all .4s ease-in-out;
 
-    &:before {
+    &::before {
       content: "";
       position: absolute;
       height: 0;
@@ -46,6 +58,19 @@
       border-bottom: 10px solid transparent;
       
       transform: rotate(45deg);
+      transition: all .4s ease-in-out;
+    }
+
+    &:hover {
+      border: 1px solid $secondaryBlack;
+      background: red;
+      transform: rotate(calc(360deg - 45deg));
+    }
+
+    &:hover::before {
+      border-left: 0px solid black;
+      border-top: 0px solid transparent;
+      border-bottom: 0px solid transparent;
     }
   }
 
