--- a/style/sass/_main.scss
+++ b/style/sass/_main.scss
@@ -5,10 +5,10 @@
   &__cards-container{
     @include flexCenter();
     flex-wrap: wrap;
-    align-content: center;
 
+    border-radius: 20px;
     padding: 40px;
-    background: #3b3b3b;
+    background: lighten($primaryBlack, 20%);
 
     &__card {
       position: relative;
@@ -23,11 +23,25 @@
         background: #fff;
         opacity: 90%;
         transition: all .3s ease;
+
+        &:focus {background: red;}
       }
 
       &__image {
+        // position: relative;
         height: 100%;
         width: 100%;
+
+        // &::before {
+        //   content: '';
+        //   position: absolute;
+        //   top: 0;
+        //   left: 0;
+        //   width: 50px;
+        //   height: 50px;
+        //   background: red;
+        //   z-index: 10;
+        // }
       }
     }
   }
