--- a/style/sass/_header.scss
+++ b/style/sass/_header.scss
@@ -1,24 +1,25 @@
 .header {
-  position: absolute;
-  height: 100%;
-  width: 40px;
-  padding: 20px 0;
+    position: static;
+    width: 100%;
+    height: 60px;
+    padding: 10px 20px 0 20px;
+    margin-bottom: 10px;
   
   &::after {
     content: '';
     position: absolute;
-    top: 0;
+    top: 60px;
     left: 0;
+    z-index: -1;
+    width: 30px;
     height: 100%;
-    width: 40px;
-    border-right: 1px solid lighten($primaryBlack, 40%);
+    border-right: 0;
+    border-right: 3px solid $primaryBlack;
   }
 
   &__list {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    padding-left: 20px;
+    @include flexCenter();
+    justify-content: space-between;
 
     &::after {
       content: '';
@@ -32,17 +33,17 @@
 
   &__list__item__reset__arrow {
     position: relative;
-    height: 40px;
-    width: 40px;
+    height: 60px;
+    width: 60px;
 
-    border: 3px solid transparent;
+    border: 5px solid transparent;
     border-top-color: black;
     border-left-color: black;
     border-bottom-color: black;
     border-right-color: transparent;
     border-radius: 50%;
 
-    transform: rotate(35deg);
+    transform: rotate(15deg);
     transition: all .4s ease-in-out;
 
     &::before {
@@ -63,7 +64,7 @@
 
     &:hover {
       border: 1px solid $secondaryBlack;
-      background: red;
+      background: #29AAFD;
       transform: rotate(calc(360deg - 45deg));
     }
 
