--- a/style/sass/_variablesMixins.scss
+++ b/style/sass/_variablesMixins.scss
@@ -7,7 +7,7 @@ $primaryBlack: #2e2e2e;
 $secondaryBlack: #333333;
 $primaryWhite: #f6f6f6;
 $secondaryWhite: #ccc;
-$primaryColor: #64a604;
+$primaryColor: #DC0A2D;
 $secondaryColor: #DC1570;
 
 // background colours
