--- a/style/sass/_main.scss
+++ b/style/sass/_main.scss
@@ -1,6 +1,6 @@
 .main {
   @include flexCenter();
-  height: 100vh;
+  height: calc( 100vh - 70px );
 
   &__cards-container{
     @include flexCenter();
