--- a/style/sass/_main.scss
+++ b/style/sass/_main.scss
@@ -26,7 +26,7 @@
 
         &:focus {background: $primaryColor;}
       }
-
+// testing
       &__image {
         // position: relative;
         height: 100%;
