--- a/style/sass/_header.scss
+++ b/style/sass/_header.scss
@@ -37,9 +37,9 @@
     width: 60px;
 
     border: 5px solid transparent;
-    border-top-color: black;
-    border-left-color: black;
-    border-bottom-color: black;
+    border-top-color: $primaryWhite;
+    border-left-color: $primaryWhite;
+    border-bottom-color: $primaryWhite;
     border-right-color: transparent;
     border-radius: 50%;
 
@@ -54,7 +54,7 @@
       top: 0px;
       left: 80%;
       
-      border-left: 15px solid black;
+      border-left: 15px solid $primaryWhite;
       border-top: 10px solid transparent;
       border-bottom: 15px solid transparent;
       
@@ -63,13 +63,13 @@
     }
 
     &:hover {
-      border: 1px solid $secondaryBlack;
+      border: 4px solid $secondaryWhite;
       background: #29AAFD;
       transform: rotate(calc(360deg - 45deg));
     }
 
     &:hover::before {
-      border-left: 0px solid black;
+      border-left: 0px solid $primaryWhite;
       border-top: 0px solid transparent;
       border-bottom: 0px solid transparent;
     }
