--- a/style/style.css
+++ b/style/style.css
@@ -360,9 +360,9 @@ a, p {
   height: 60px;
   width: 60px;
   border: 5px solid transparent;
-  border-top-color: black;
-  border-left-color: black;
-  border-bottom-color: black;
+  border-top-color: #f6f6f6;
+  border-left-color: #f6f6f6;
+  border-bottom-color: #f6f6f6;
   border-right-color: transparent;
   border-radius: 50%;
   -webkit-transform: rotate(15deg);
@@ -378,7 +378,7 @@ a, p {
   width: 0;
   top: 0px;
   left: 80%;
-  border-left: 15px solid black;
+  border-left: 15px solid #f6f6f6;
   border-top: 10px solid transparent;
   border-bottom: 15px solid transparent;
   -webkit-transform: rotate(45deg);
@@ -388,14 +388,14 @@ a, p {
 }
 
 .header__list__item__reset__arrow:hover {
-  border: 1px solid #333333;
+  border: 4px solid #ccc;
   background: #29AAFD;
   -webkit-transform: rotate(calc(360deg - 45deg));
           transform: rotate(calc(360deg - 45deg));
 }
 
 .header__list__item__reset__arrow:hover::before {
-  border-left: 0px solid black;
+  border-left: 0px solid #f6f6f6;
   border-top: 0px solid transparent;
   border-bottom: 0px solid transparent;
 }
@@ -459,11 +459,8 @@ a, p {
 
 @media (max-width: 870px) {
   .wrapper {
-    max-width: calc( 120px * 4 + 125px);
+    max-width: calc( 120px * 4 + 80px);
     width: 90%;
-  }
-  .main {
-    padding-left: 45px;
   }
   .main__cards-container__card {
     -webkit-box-flex: 0;
@@ -493,13 +490,16 @@ a, p {
 
 @media (max-width: 585px) {
   .wrapper {
-    max-width: calc( 90px * 3 + 40px);
+    max-width: calc( 85px * 3 + 20px);
     width: 99%;
+  }
+  .main__cards-container {
+    padding: 10px;
   }
   .main__cards-container__card {
     -webkit-box-flex: 0;
-        -ms-flex: 0 1 90px;
-            flex: 0 1 90px;
-    height: 90px;
+        -ms-flex: 0 1 85px;
+            flex: 0 1 85px;
+    height: 85px;
   }
 }
