fixed top right timer. working on 'you win you lose'

--- a/style/sass/_variablesMixins.scss
+++ b/style/sass/_variablesMixins.scss
@@ -46,7 +46,7 @@ $accentBg: #dded9a;
 }
 
 @mixin focusState() {
-    outline: 6px dotted $secondaryColor;
+    outline: 6px dotted $primaryWhite;
 }
 
 // might be useful
