--- a/style/sass/_footer.scss
+++ b/style/sass/_footer.scss
@@ -9,12 +9,19 @@
 
   &__landing {
     @include flexCenter();
+    flex-direction: column;
+
     width: 100%;
     height: 100%;
     background: rgba(12, 10, 10, 0.98);
 
     button {
-      color: #fff;
+      @include fontDisplay(16, 400, $accentColor);
+      padding: 6px 10px;
+      border: 3px solid $accentColor;
+
+      background: $secondaryColor;
+      box-shadow: -3px 5px 0px lighten($accentColor, 50%);
     }
   }
 }
