--- a/style/style.css
+++ b/style/style.css
@@ -468,6 +468,12 @@ a, p {
 }
 
 .footer__landing {
+  width: 100%;
+  height: 100%;
+  background: rgba(12, 10, 10, 0.98);
+}
+
+.footer__landing .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -481,9 +487,23 @@ a, p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100%;
-  height: 100%;
-  background: rgba(12, 10, 10, 0.98);
+}
+
+.footer__landing__logo {
+  margin-top: 20%;
+  margin-bottom: 25px;
+}
+
+.footer__landing__welcome {
+  font-size: 12px;
+  font-size: 1.2rem;
+  font-family: 'Lexend Giga', sans-serif;
+  font-weight: 400;
+  color: #0c0a0a;
+  padding: 0px 30px;
+  background: url(../assets/pokemonBorder.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 
 .footer__landing button {
