--- a/style/sass/_footer.scss
+++ b/style/sass/_footer.scss
@@ -10,7 +10,7 @@
   &__landing {
     width: 100%;
     height: 100%;
-    background: rgba(12, 10, 10, 0.98);
+    background: rgba(12, 10, 10, 0.9);
 
     .wrapper {
       @include flexCenter();
@@ -23,21 +23,77 @@
     }
 
     &__welcome {
-      @include fontSans(12, 400, $secondaryBlack);
-      padding: 0px 30px;
-      // background: $primaryWhite;
-      background: url(../assets/pokemonBorder.png);
+      position: relative;
+      max-width: 650px;
+      padding: 25px 10px 20px 10px;
+      border-left: 10px solid #000;
+      border-right: 10px solid #000;
+      background: $primaryWhite;
+      // background: url(../assets/pokemonBorder.png);
       background-size: 100% 100%;
       background-repeat: no-repeat;
-    }
+      
+      &:before, &:after {
+        content: "";
+        width: calc(100% + 20px);
+        height: 0;
+        position: absolute;
+        left: -10px;
+      }
 
-    button {
-      @include fontDisplay(16, 400, $accentColor);
-      padding: 6px 10px;
-      border: 3px solid $accentColor;
+      &:before {
+        top: -10px;
+        border-bottom: 10px solid #000;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+      }
 
-      background: $secondaryColor;
-      box-shadow: -3px 5px 0px lighten($accentColor, 50%);
+      &:after {
+        bottom: -15px;
+        border-top: 15px solid #000;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+      }
+
+      p {
+        @include fontSans(26, 400, $secondaryBlack);
+        position: relative;
+        margin: 0;
+        border-left: 10px solid #000;
+        border-right: 10px solid #000;
+        padding: 10px;
+        padding-bottom: 30px;
+
+        &:before, &:after {
+          content: "";
+          width: calc(100% + 20px);
+          height: 0;
+          position: absolute;
+          left: -10px;
+        }
+  
+        &:before {
+          top: -15px;
+          border-bottom: 15px solid #000;
+          border-left: 15px solid transparent;
+          border-right: 15px solid transparent;
+        }
+  
+        &:after {
+          bottom: -10px;
+          border-top: 10px solid #000;
+          border-left: 10px solid transparent;
+          border-right: 10px solid transparent;
+        }
+
+        button {
+          @include fontDisplay(22, 400, $primaryColor);
+          position: absolute;
+          bottom: 0;
+          right: 0;
+        }
+      }
+    
     }
   }
 }
