--- a/style/style.css
+++ b/style/style.css
@@ -470,7 +470,7 @@ a, p {
 .footer__landing {
   width: 100%;
   height: 100%;
-  background: rgba(12, 10, 10, 0.98);
+  background: rgba(12, 10, 10, 0.9);
 }
 
 .footer__landing .wrapper {
@@ -495,28 +495,83 @@ a, p {
 }
 
 .footer__landing__welcome {
-  font-size: 12px;
-  font-size: 1.2rem;
-  font-family: 'Lexend Giga', sans-serif;
-  font-weight: 400;
-  color: #0c0a0a;
-  padding: 0px 30px;
-  background: url(../assets/pokemonBorder.png);
+  position: relative;
+  max-width: 650px;
+  padding: 25px 10px 20px 10px;
+  border-left: 10px solid #000;
+  border-right: 10px solid #000;
+  background: #f6f6f6;
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
 
-.footer__landing button {
-  font-size: 16px;
-  font-size: 1.6rem;
+.footer__landing__welcome:before, .footer__landing__welcome:after {
+  content: "";
+  width: calc(100% + 20px);
+  height: 0;
+  position: absolute;
+  left: -10px;
+}
+
+.footer__landing__welcome:before {
+  top: -10px;
+  border-bottom: 10px solid #000;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+}
+
+.footer__landing__welcome:after {
+  bottom: -15px;
+  border-top: 15px solid #000;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+}
+
+.footer__landing__welcome p {
+  font-size: 26px;
+  font-size: 2.6rem;
+  font-family: 'Lexend Giga', sans-serif;
+  font-weight: 400;
+  color: #0c0a0a;
+  position: relative;
+  margin: 0;
+  border-left: 10px solid #000;
+  border-right: 10px solid #000;
+  padding: 10px;
+  padding-bottom: 30px;
+}
+
+.footer__landing__welcome p:before, .footer__landing__welcome p:after {
+  content: "";
+  width: calc(100% + 20px);
+  height: 0;
+  position: absolute;
+  left: -10px;
+}
+
+.footer__landing__welcome p:before {
+  top: -15px;
+  border-bottom: 15px solid #000;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+}
+
+.footer__landing__welcome p:after {
+  bottom: -10px;
+  border-top: 10px solid #000;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+}
+
+.footer__landing__welcome p button {
+  font-size: 22px;
+  font-size: 2.2rem;
   font-family: 'Sigmar One', cursive;
   font-weight: 400;
-  color: #004894;
-  padding: 6px 10px;
-  border: 3px solid #004894;
-  background: #FFCB08;
-  -webkit-box-shadow: -3px 5px 0px #94c8ff;
-          box-shadow: -3px 5px 0px #94c8ff;
+  color: #DC0A2D;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 @media (max-width: 870px) {
