--- a/style/sass/_footer.scss
+++ b/style/sass/_footer.scss
@@ -1,39 +1,44 @@
 .footer {
-  background: url(../assets/pokeballs.jpg);
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
 
+  background: url(../assets/pokeballs.jpg);
 
   &__landing {
     width: 100%;
     height: 100%;
     background: rgba(12, 10, 10, 0.9);
 
-    .wrapper {
-      @include flexCenter();
-      flex-direction: column;
-    }
-
     &__logo {
-      margin-top: 20%;
+      max-height: 260px;
+      width: 100%;
+      margin-top: 20vh;
       margin-bottom: 25px;
+
+      img {
+        object-fit: scale-down;
+        max-height: 260px;
+        width: 100%;
+      }
     }
 
     &__welcome {
       position: relative;
       max-width: 650px;
+
       padding: 25px 10px 20px 10px;
       border-left: 10px solid #000;
       border-right: 10px solid #000;
+      
       background: $primaryWhite;
-      // background: url(../assets/pokemonBorder.png);
       background-size: 100% 100%;
       background-repeat: no-repeat;
       
-      &:before, &:after {
+      // before and afters to build the outer border
+      &::before, &::after {
         content: "";
         width: calc(100% + 20px);
         height: 0;
@@ -41,14 +46,14 @@
         left: -10px;
       }
 
-      &:before {
+      &::before {
         top: -10px;
         border-bottom: 10px solid #000;
         border-left: 10px solid transparent;
         border-right: 10px solid transparent;
       }
 
-      &:after {
+      &::after {
         bottom: -15px;
         border-top: 15px solid #000;
         border-left: 10px solid transparent;
@@ -58,13 +63,15 @@
       p {
         @include fontSans(26, 400, $secondaryBlack);
         position: relative;
-        margin: 0;
-        border-left: 10px solid #000;
-        border-right: 10px solid #000;
+
         padding: 10px;
         padding-bottom: 30px;
+        border-left: 10px solid #000;
+        border-right: 10px solid #000;
+        margin: 0;
 
-        &:before, &:after {
+        // before and afters to build inner border
+        &::before, &::after {
           content: "";
           width: calc(100% + 20px);
           height: 0;
@@ -72,14 +79,14 @@
           left: -10px;
         }
   
-        &:before {
+        &::before {
           top: -15px;
           border-bottom: 15px solid #000;
           border-left: 15px solid transparent;
           border-right: 15px solid transparent;
         }
   
-        &:after {
+        &::after {
           bottom: -10px;
           border-top: 10px solid #000;
           border-left: 10px solid transparent;
@@ -90,7 +97,10 @@
           @include fontDisplay(22, 400, $primaryColor);
           position: absolute;
           bottom: 0;
-          right: 0;
+          right: 3px;
+          filter: drop-shadow(1px 1px 0 $secondaryBlack);
+
+          span {color: $secondaryBlack;}
         }
       }
     
