--- a/style/sass/_header.scss
+++ b/style/sass/_header.scss
@@ -1,8 +1,9 @@
 .header {
     position: static;
-    width: 100%;
+    max-width: calc( #{$squareCardSize} * 5 + 80px );
     height: 60px;
-    padding: 10px 20px 0 20px;
+    padding: 20px 0 0;
+    margin: 0 auto;
     margin-bottom: 10px;
   
   &__list {
@@ -23,8 +24,8 @@
 
   &__list__item__reset__arrow {
     position: relative;
-    height: 60px;
-    width: 60px;
+    height: 40px;
+    width: 40px;
 
     border: 5px solid transparent;
     border-top-color: $primaryWhite;
@@ -39,14 +40,14 @@
     &::before {
       content: "";
       position: absolute;
-      top: 0px;
+      top: -3px;
       left: 80%;
       height: 0;
       width: 0;
       
-      border-left: 15px solid $primaryWhite;
+      border-left: 10px solid $primaryWhite;
       border-top: 10px solid transparent;
-      border-bottom: 15px solid transparent;
+      border-bottom: 10px solid transparent;
       
       transform: rotate(45deg);
       transition: all .4s ease-in-out;
