--- a/style/sass/_main.scss
+++ b/style/sass/_main.scss
@@ -20,10 +20,11 @@
         position: absolute;
         width: 100%;
         height: 100%;
-
+        
         background: lighten($primaryBlack, 70%);
         transition: all .3s ease;
-
+        // opacity: 80%; // uncomment this for testing
+        
         &:focus {background: $primaryColor;}
       }
 
