--- a/style/style.css
+++ b/style/style.css
@@ -446,31 +446,58 @@ a, p {
   background: #7b7b7b;
 }
 
-.main__cards-container__card {
+.main__cards-container__inner {
   position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+}
+
+.main__cards-container__card {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 150px;
           flex: 0 1 150px;
   height: 150px;
+  width: 150px;
   border: 1px solid #0c0a0a;
+  background-color: transparent;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
 }
 
-.main__cards-container__card__overlay {
+.main__cards-container__card__front, .main__cards-container__card__back {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #e1e1e1;
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
-.main__cards-container__card__overlay:focus {
+.main__cards-container__card__front {
+  background: #e1e1e1;
+}
+
+.main__cards-container__card__front:focus {
   background: #DC0A2D;
+}
+
+.main__cards-container__card__back {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 
 .main__cards-container__card__image {
   height: 100%;
   width: 100%;
+}
+
+.main .flip-card {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 
 .footer {
