--- a/style/sass/_main.scss
+++ b/style/sass/_main.scss
@@ -14,6 +14,7 @@
       position: relative;
       width: 100%;
       height: 100%;
+      border: 3px solid $secondaryColor;
       text-align: center;
       transition: all 0.6s ease;
       transform-style: preserve-3d;
@@ -23,7 +24,6 @@
       flex: 0 1 $squareCardSize;
       height: $squareCardSize;
       width: $squareCardSize;
-      border: 1px solid $secondaryBlack;
       background-color: transparent;
       perspective: 1000px;
 
@@ -40,14 +40,20 @@
       }
 
       &__front {
-        background: lighten($primaryBlack, 70%);
-        // transition: all .3s ease;
-        // opacity: 80%; // uncomment this for testing
-        
+        display: flex;
+        justify-content: center;
+        background: $accentColor;
         &:focus {background: $primaryColor;}
+
+        img {
+          width: 50%;
+          height: 50%;
+          margin: auto 0;
+        }
       }
 
       &__back {
+        background: $secondaryWhite;
         transform: rotateY(180deg);
       }
 
