--- a/style/style.css
+++ b/style/style.css
@@ -450,6 +450,7 @@ a, p {
   position: relative;
   width: 100%;
   height: 100%;
+  border: 3px solid #FFCB08;
   text-align: center;
   -webkit-transition: all 0.6s ease;
   transition: all 0.6s ease;
@@ -463,7 +464,6 @@ a, p {
           flex: 0 1 150px;
   height: 150px;
   width: 150px;
-  border: 1px solid #0c0a0a;
   background-color: transparent;
   -webkit-perspective: 1000px;
           perspective: 1000px;
@@ -478,14 +478,27 @@ a, p {
 }
 
 .main__cards-container__card__front {
-  background: #e1e1e1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #004894;
 }
 
 .main__cards-container__card__front:focus {
   background: #DC0A2D;
 }
 
+.main__cards-container__card__front img {
+  width: 50%;
+  height: 50%;
+  margin: auto 0;
+}
+
 .main__cards-container__card__back {
+  background: #ccc;
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
 }
