revamped cards styling. fixed accessibility issues. fixed repeat clickcounter bug. ☢

--- a/style/sass/_footer.scss
+++ b/style/sass/_footer.scss
@@ -100,6 +100,13 @@
           bottom: 0;
           right: 3px;
 
+          &:focus {
+            outline: none;
+            color: $accentColor;
+            
+            span {color: $primaryColor;}
+          }
+
           span {
             color: $secondaryBlack;
             display: inline-block;
