--- a/style/sass/_main.scss
+++ b/style/sass/_main.scss
@@ -5,37 +5,48 @@
   &__cards-container {
     @include flexCenter();
     flex-wrap: wrap;
-
     padding: 40px;
     border-radius: 10px;
-    background: lighten($primaryBlack, 30%);
 
     &__inner {
       position: relative;
       width: 100%;
       height: 100%;
-      border: 3px solid $secondaryColor;
+      border: 4px solid $secondaryColor;
+      border-radius: 1rem;
       text-align: center;
       transition: all 0.6s ease;
       transform-style: preserve-3d;
+
+      &:hover,
+      &:focus {
+        transform: translate(4px, -4px) rotateY(15deg);
+      }
+
+      &:focus .main__cards-container__card__front {
+        background: $primaryColor;
+      }
     }
 
     &__card {
       flex: 0 1 $squareCardSize;
       height: $squareCardSize;
       width: $squareCardSize;
+      margin: 0.3em;
       background-color: transparent;
+      transition: all 0.6s ease;
+      filter: drop-shadow(-2px -2px 2px transparent);
       perspective: 1000px;
-
-      // &:hover .main__cards-container__inner {
-      //   transform: rotateY(180deg);
-      // }
 
       &__front, 
       &__back {
         position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
+        border-radius: 0.5rem;
+        transition: all 0.6s ease;
         backface-visibility: hidden;
       }
 
@@ -43,7 +54,6 @@
         display: flex;
         justify-content: center;
         background: $accentColor;
-        &:focus {background: $primaryColor;}
 
         img {
           width: 50%;
@@ -53,13 +63,20 @@
       }
 
       &__back {
-        background: $secondaryWhite;
+        @include fontSize(15);
+        background: lighten($color: $accentColor, $amount: 55);
+        color: $accentColor;
+        text-align: center;
         transform: rotateY(180deg);
       }
 
       &__image {
         height: 100%;
         width: 100%;
+      }
+
+      &:hover {
+        filter: drop-shadow(-6px -3px 3px #000);
       }
     }
   }
