--- a/style/style.css
+++ b/style/style.css
@@ -272,7 +272,7 @@ html {
 }
 
 :focus {
-  outline: 3px dotted #f6f6f6;
+  outline: none;
 }
 
 html {
@@ -307,7 +307,7 @@ a, p {
 }
 
 .wrapper {
-  max-width: calc( 150px * 5 + 80px);
+  max-width: calc( 150px * 5 + 120px);
   width: 80%;
   margin: 0 auto;
 }
@@ -369,6 +369,19 @@ a, p {
   margin: 0;
   -webkit-filter: drop-shadow(1px 1px 0 #0c0a0a);
           filter: drop-shadow(1px 1px 0 #0c0a0a);
+}
+
+.header__list__item__reset:focus .header__list__item__reset__arrow {
+  border: 4px solid #ccc;
+  background: #29AAFD;
+  -webkit-transform: rotate(calc(360deg - 45deg));
+          transform: rotate(calc(360deg - 45deg));
+}
+
+.header__list__item__reset:focus .header__list__item__reset__arrow::before {
+  border-left: 0px solid #f6f6f6;
+  border-top: 0px solid transparent;
+  border-bottom: 0px solid transparent;
 }
 
 .header__list__item__reset__arrow {
@@ -443,19 +456,28 @@ a, p {
       flex-wrap: wrap;
   padding: 40px;
   border-radius: 10px;
-  background: #7b7b7b;
 }
 
 .main__cards-container__inner {
   position: relative;
   width: 100%;
   height: 100%;
-  border: 3px solid #FFCB08;
+  border: 4px solid #FFCB08;
+  border-radius: 1rem;
   text-align: center;
   -webkit-transition: all 0.6s ease;
   transition: all 0.6s ease;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
+}
+
+.main__cards-container__inner:hover, .main__cards-container__inner:focus {
+  -webkit-transform: translate(4px, -4px) rotateY(15deg);
+          transform: translate(4px, -4px) rotateY(15deg);
+}
+
+.main__cards-container__inner:focus .main__cards-container__card__front {
+  background: #DC0A2D;
 }
 
 .main__cards-container__card {
@@ -464,15 +486,25 @@ a, p {
           flex: 0 1 150px;
   height: 150px;
   width: 150px;
+  margin: 0.3em;
   background-color: transparent;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+  -webkit-filter: drop-shadow(-2px -2px 2px transparent);
+          filter: drop-shadow(-2px -2px 2px transparent);
   -webkit-perspective: 1000px;
           perspective: 1000px;
 }
 
 .main__cards-container__card__front, .main__cards-container__card__back {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  border-radius: 0.5rem;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
 }
@@ -487,10 +519,6 @@ a, p {
   background: #004894;
 }
 
-.main__cards-container__card__front:focus {
-  background: #DC0A2D;
-}
-
 .main__cards-container__card__front img {
   width: 50%;
   height: 50%;
@@ -498,7 +526,11 @@ a, p {
 }
 
 .main__cards-container__card__back {
-  background: #ccc;
+  font-size: 15px;
+  font-size: 1.5rem;
+  background: #aed5ff;
+  color: #004894;
+  text-align: center;
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
 }
@@ -506,6 +538,11 @@ a, p {
 .main__cards-container__card__image {
   height: 100%;
   width: 100%;
+}
+
+.main__cards-container__card:hover {
+  -webkit-filter: drop-shadow(-6px -3px 3px #000);
+          filter: drop-shadow(-6px -3px 3px #000);
 }
 
 .main .flip-card {
@@ -623,6 +660,15 @@ a, p {
   right: 3px;
 }
 
+.footer__landing__welcome p button:focus {
+  outline: none;
+  color: #004894;
+}
+
+.footer__landing__welcome p button:focus span {
+  color: #DC0A2D;
+}
+
 .footer__landing__welcome p button span {
   color: #0c0a0a;
   display: inline-block;
@@ -654,7 +700,7 @@ a, p {
 
 @media (max-width: 870px) {
   .wrapper {
-    max-width: calc( 120px * 4 + 80px);
+    max-width: calc( 120px * 4 + 120px);
     width: 90%;
   }
   .header {
@@ -670,7 +716,7 @@ a, p {
 
 @media (max-width: 695px) {
   .wrapper {
-    max-width: calc( 100px * 4 + 40px);
+    max-width: calc( 100px * 4 + 80px);
   }
   .main__cards-container {
     padding: 20px;
@@ -693,7 +739,7 @@ a, p {
 
 @media (max-width: 585px) {
   .wrapper {
-    max-width: calc( 85px * 3 + 20px);
+    max-width: calc( 85px * 3 + 60px);
     width: 99%;
   }
   .main__cards-container {
