--- a/style/sass/_main.scss
+++ b/style/sass/_main.scss
@@ -7,7 +7,8 @@
     flex-wrap: wrap;
     padding: 40px;
     border-radius: 10px;
-
+    margin: 0 auto;
+    width: auto;
     &__inner {
       position: relative;
       width: 100%;
